--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
   },
   "homepage": "https://github.com/smolyakova30/blog#readme",
   "dependencies": {
-    "express-handlebars": "^5.3.4"
+    "connect-session-sequelize": "^7.1.2",
+    "express-handlebars": "^5.3.4",
+    "express-session": "^1.17.2",
+    "handlebars": "^4.7.7"
+  },
+  "devDependencies": {
+    "jest": "^27.3.1"
   }
 }
