--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "start": "node server.js",
     "seed": "node seeds/index.js"
-},
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/smolyakova30/blog.git"
@@ -26,6 +26,8 @@
     "express-handlebars": "^5.3.4",
     "express-session": "^1.17.2",
     "handlebars": "^4.7.7",
+    "mysql": "github:felixge/node-mysql",
+    "mysql-db-seed": "0.0.4",
     "mysql2": "^2.3.2",
     "sequelize": "^6.7.0"
   },
